<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404040"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:layout_gravity="center"
        android:text="@string/sign_in"/>

    <EditText
        android:id="@+id/login_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_username"
        android:drawableEnd="@drawable/ic_user"
        android:textSize="22sp"
        android:background="@color/white"
        android:padding="10dp"
        android:inputType="text"
        android:ems="10"
        android:autofillHints="@string/enter_username" />

    <EditText
        android:id="@+id/login_password"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_pass"
        android:drawableEnd="@drawable/ic_password"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        android:autofillHints="@string/enter_pass" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#0055DD"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/create"
        android:gravity="center"
        android:background="#0055DD"
        android:padding="10dp" />


</LinearLayout>